--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Pavani's Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
@@ -366,6 +366,14 @@
             class="icon contact-icon"
           />
           <p><a href="https://www.linkedin.com/in/pavani-vedurupaka-05b411230/">LinkedIn</a></p>
+        </div>
+        <div class="contact-info-container">
+          <img
+            src="./phone.jpg"
+            alt="Phone icon"
+            class="icon contact-icon email-icon"
+          />
+          <p>+91-9392024411</p>
         </div>
       </div>
     </section>
